--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,11 +21,11 @@ services:
               capabilities: [gpu]
     ipc: host
     command: >
-      --model hugging-quants/Meta-Llama-3.2-3B-Instruct-AWQ-INT4
-      --quantization awq_marlin
+      --model MaziyarPanahi/Mistral-7B-Instruct-v0.3-AWQ
+      --quantization awq
       --dtype float16
       --gpu-memory-utilization 0.95
-      --max-model-len 2222
+      --max-model-len 4096
       --tensor-parallel-size 1
       --enable-chunked-prefill
       --enable-prefix-caching
